# interactive_class

./: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
frontend/bindings/: ClientMessage.ts  ConnectionType.ts  CreateRoom.ts  CupColor.ts  CupsInfo.ts  DeleteRoom.ts  PublishQuestion.ts  Question.ts  QuestionAnswer.ts  QuestionId.ts  QuestionInfo.ts  QuestionModification.ts  QuestionPublication.ts  QuestionState.ts  RoomConnectInfo.ts  RoomInfo.ts  WSMessage.ts  WSTask.ts
frontend/src/: App.svelte  i18n.ts  index.css  types.ts
frontend/src/components/: AnswerBarChart.svelte  CupBlock.svelte  CupsSummary.svelte  DivTimer.svelte  QuestionForm.svelte  QuestionView.svelte  QuestionViewAll.svelte  QuestionViewStudent.svelte  WSError.svelte  WSStatus.svelte
frontend/src/lang/: en.json  es.json
frontend/src/routes/: Home.svelte  Room.svelte  TeacherView.svelte
frontend/src/stores/: ws.ts
src/: configuration.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs  utils.rs
src/routes/: cups.rs  health_check.rs  mod.rs  ws.rs
src/routes/ws/: error.rs  message.rs  mod.rs  session.rs
tests/api/: cups.rs  health_check.rs  heartbeat.rs  helpers.rs  main.rs  questions.rs
