[package]
name = "interactive_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "interactive_class"
path = "src/main.rs"


[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
secrecy = { version = "0.8", features = ["serde"] }
ts-rs = "6.1"
uuid = { version = "1.1", features = ["v4", "serde"] }

actix = "0.13"
actix-web = "4.1"
actix-web-actors = "4.1"

tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

serde-aux = "3"
serde_with = "1.14"
serde_json = "1.0"

thiserror = "1"
anyhow = "1"
itertools = "0.10"

[dev-dependencies]
actix-rt = "2.7"
actix-codec = "0.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.7"
awc = "3.0"
futures = "0.3"
